--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,9 @@ flutter:
 
   assets:
     - images/CMKL-logo.png
+    - images/Visa.png
+    - images/Mastercard.png
+    - images/JCB.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
