added 2 new pages
added in some 2 new images to pubspec.yaml.
Added two new pages 'event.dart' and redid 'payment_options2.dart'

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,8 @@ flutter:
     - images/Visa.png
     - images/Mastercard.png
     - images/JCB.png
+    - images/event1.png
+    - images/event2.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
