added selectoin page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,7 @@ flutter:
     - images/home/banking.png
     - images/home/scan.png
     - images/home/more.png
+    - images/home/gradeNoBG.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
