--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,7 @@ flutter:
     - images/home/scan.png
     - images/home/more.png
     - images/home/gradeNoBG.png
+    - images/Connect_with_bank.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
