--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,6 +87,7 @@ flutter:
     - images/home/more.png
     - images/home/gradeNoBG.png
     - images/Connect_with_bank.png
+    - images/paymentsuc.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
